# slinput

./: CMakeLists.txt  LICENSE  README.md
include/: slinput.h
src/: CMakeLists.txt  slinput.c  slinput_internal.h  slinputi.h
src/adapt/: linux.c  slinput_linux.c  slinput_tos_vbcc.c  tos.c
src/example/: CMakeLists.txt  main.c
src/unittest/: CMakeLists.txt  slinput_unittest.cpp  unittest.cpp
